--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <button class="next-button"></button>
   </a>
 
-  <a href="https://family-album.glitch.me/">
+  <a href="https://post-family-album-enter.netlify.app/">
     <button class="prev-button"></button>
   </a>
 
